# firstpass-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  example.env  openapi-config.yaml  openapi.json  pyproject.toml
.github/workflows/: main.yaml  openapi-client-generator.yaml
app/: main.py
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/docs/: Blob.md  DefaultApi.md  Token.md  UserCreate.md  UserGet.md
python-client/openapi_client/: __init__.py  configuration.py
python-client/openapi_client/api/: default_api.py
python-client/openapi_client/models/: __init__.py
python-client/test/: test_blob.py  test_default_api.py  test_token.py  test_user_create.py  test_user_get.py
tests/app/: test_app.py
