[project]
name = "firstpass-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "types-pyyaml>=6.0.12.20240917",
]
